test/sema/typeck/fn/mutable-param-err.out
error: unknown identifier `x`.
--> mutable-param-err.dora:1:19
 | fn f(_x: Int64) { x = 10; }
                     ~
 | 
1 error found.
